--- a/BookStore-API/nlog.config
+++ b/BookStore-API/nlog.config
@@ -3,11 +3,11 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Trace"
-      internalLogFile="D:/Users/szemba/Source/Repos/BookStore-API/BookStore-API/logs/internallog.txt">
+      internalLogFile="D:/Users/szemba/BookStore-API Logs/internallog.txt">
 
   <targets>
     <target name="logfile" xsi:type="File"
-            fileName="D:/Users/szemba/Source/Repos/BookStore-API/BookStore-API/logs/${shortdate}_logfile.txt"
+            fileName="D:/Users/szemba/BookStore-API Logs/${shortdate}_logfile.txt"
             layout="${longdate} ${level:uppercase=true} ${message}"/>
   </targets>
 
