Added Identity and Jwt. Authentication to API. DbContext fixes.

--- a/BookStore-API/appsettings.json
+++ b/BookStore-API/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "185517fa-147e-48fa-9672-e7a83b369870",
+    "Issuer": "test.com"
+  } 
 }
